<resources>
    <string name="app_name">Pop.Bar</string>
    <string name="app_email">pop.bar.tim@gmail.com</string>

    <string name="email">E-mail</string>
    <string name="password">Lozinka</string>
    <string name="login">Prijavi se</string>
    <string name="add_drink">Dodaj piće</string>
    <string name="show_drink_list">Prikaži listu pića</string>
    <string name="drink_name">Naziv pića</string>
    <string name="barcode">Barkod</string>
    <string name="click_to_scan">Klikni da skeniraš</string>
    <string name="volume">Zapremina</string>
    <string name="millilitre">ml</string>
    <string name="add_drink_name">dodaj naziv…</string>
    <string name="weight_full_bottle">Puna flaša</string>
    <string name="grams">g</string>
    <string name="weight_empty_bottle">Prazna flaša</string>
    <string name="submit">Potvrdi</string>
    <string name="cancel">otkaži</string>
    <string name="add_drink_image">Dodaj sliku pića</string>
    <string name="calcuate_volume">Izračunaj</string>
    <string name="remember_password">Zapamti lozinku</string>
    <string name="confiramtion_message">Da li ste sigurni da želite da obrišete piće?</string>
    <string name="yes">Obriši</string>
    <string name="no">Otkaži</string>
    <string name="forgot_password">Zaboravljena lozinka?</string>
    <string name="use_camera">Slikaj kamerom</string>
    <string name="import_from_gallery">Izaberi sliku iz Galerije</string>
    <string name="current_weight">Trenutna težina flaše(g)</string>

    <string name="send_reset_pass_email">Poslaćemo e-mail na Vašu e-mail adresu kako biste resetovali lozinku.
    Vaš e-mail: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="calculated_drinks">Izmerena pića</string>
    <string name="drink_list">Lista svih pića</string>
    <string name="graph">Grafik prodaje</string>
    <string name="about_us">O aplikaciji</string>
    <string name="contact">Kontakt</string>
    <string name="signout">Odjava</string>
    <string name="exit_app">Napusti aplikaciju</string>

    <string name="open">Otvori</string>
    <string name="close">Zatvori</string>
    <string name="click_to_pick_date">Klikni da odabereš datum</string>
    <string name="date">Datum:</string>
    <string name="startCalculating">Započni popis</string>

    <string name="drink_not_exist_in_db">Piće sa ovim barkodom nije dodato u bazu pića</string>
    <string name="exit_app_popup_dialog">Da li ste sigurni da želite da napustite aplikaciju?</string>
    <string name="contact_us">Kontaktirajte nas</string>
    <string name="by_phone">Putem telefona:</string>
    <string name="by_email">Putem e-maila:</string>
    <string name="email_address">pop.bar.tim@gmail.com</string>
    <string name="phone_number">+381 69 1463423</string>

    <string name="choose_email_app">Izaberite aplikaciju za slanje e-maila</string>
    <string name="watch_info_video">Video sa instrukcijama pogledajte</string>
    <string name="here">OVDE</string>
    <string name="youtube_video_id">FHXlpIle8Sg</string>

    <string name="delete_all_drinks_for_date">Da li ste sigurni da želite da obrišete sva pića za trenutni datum?</string>


</resources>
