<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item android:id="@+id/calculated_drinks" android:title="@string/calculated_drinks" android:icon="@drawable/calculated_drinks"/>
    <item android:id="@+id/drink_list" android:title="@string/drink_list" android:icon="@drawable/all_drinks"/>
    <item android:id="@+id/about_us" android:title="@string/about_us" android:icon="@drawable/ic_info_outline_black_24dp"/>
    <item android:id="@+id/contact" android:title="@string/contact" android:icon="@drawable/contact_us_icon"/>
    </group>

    <item android:title="">
        <menu>
    <item android:id="@+id/signout" android:title="@string/signout" android:icon="@drawable/singout_user"/>
    <item android:id="@+id/exit_app" android:title="@string/exit_app" android:icon="@drawable/ic_exit_to_app_black_24dp"/>
        </menu>
    </item>

</menu>