<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="23dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/confirmDialogMessage"

                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/confiramtion_message"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/noButton"
                android:background="@color/colorAccent"

                android:layout_marginTop="25dp"
                android:layout_below="@id/confirmDialogMessage"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:text="@string/no"
                android:layout_height="wrap_content" />


            <Button
                android:id="@+id/yesButton"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/yes"
                android:background="@color/colorAccent"
                android:layout_alignBottom="@id/noButton"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>