<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2b52ff"
    tools:context="com.popbarorg.popbar.Activities.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/sym_action_email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailTextInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"

        android:id="@+id/passwordTextInputLayout">

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@android:color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/forgotPasswordTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/submit"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/rememberPasswordCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/passwordTextInputLayout"
        android:layout_alignEnd="@id/passwordTextInputLayout"
        android:layout_below="@+id/passwordTextInputLayout"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/remember_password"
        android:textColor="@android:color/white"
        app:buttonTint="@android:color/white" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#9afaff"
        android:layout_alignStart="@+id/passwordTextInputLayout"
        android:layout_alignLeft="@+id/passwordTextInputLayout"
        android:layout_toLeftOf="@id/rememberPasswordCheckBox"
        android:layout_toStartOf="@id/rememberPasswordCheckBox"
        android:layout_below="@+id/passwordTextInputLayout"
        android:text="@string/forgot_password"
        android:layout_alignBaseline="@id/rememberPasswordCheckBox"/>


</RelativeLayout>
