<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#4c6dfd"
    >

    <ImageView
        android:id="@+id/drinkImage"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/add_image" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drinkImage"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:id="@+id/drinkNameTextInputLayout">

        <EditText
            android:id="@+id/drinkNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/drink_name"
            android:textColor="@android:color/white"
            android:ems="10"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drinkNameTextInputLayout"
        android:layout_alignLeft="@+id/drinkNameTextInputLayout"
       android:layout_alignStart="@+id/drinkNameTextInputLayout"
        android:layout_toLeftOf="@+id/linearLayout"
        android:layout_toStartOf="@id/linearLayout"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/drinkBarcodeTextInputLayout">

        <EditText
            android:id="@+id/drinkBarcodeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/barcode"
            android:textColor="@android:color/white"
            android:ems="10"
            android:inputType="number"
            />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/drinkBarcodeTextInputLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_to_scan"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@android:color/black"/>

        <ImageView
            android:id="@+id/scanBarcodeImage"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|bottom"
            android:scaleType="fitXY"
            android:src="@drawable/barcode" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drinkBarcodeTextInputLayout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/volumeEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/volume"
                android:inputType="number"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ml"
                android:layout_gravity="bottom"
                android:layout_weight="0"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="4dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/weightFullEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/weight_full_bottle"
                android:inputType="number"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="g"
                android:layout_gravity="bottom"
                android:layout_weight="0"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="4dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/weightEmptyEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/weight_empty_bottle"
                android:inputType="number"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="g"
                android:layout_gravity="bottom"
                android:layout_weight="0"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="4dp"/>


        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:src="@drawable/ic_done_white_24dp"
        app:backgroundTint="@android:color/holo_green_light"
        app:elevation="10dp"
        app:fabSize="normal" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:src="@drawable/ic_close_white_24dp"
        app:backgroundTint="@android:color/holo_red_light"
        app:elevation="10dp"
        app:fabSize="normal" />




</RelativeLayout>